--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 .freedays-link{
-color:red;
+color: red;
+font-family: 'Open Sans', sans-serif;
 }
 .mainp{
 	color: white;
@@ -49,7 +50,7 @@ footer{
 	text-align: right;
 
 }
-.div-first p{
+p{
 
 margin-right: 40px;
 font-size: 20px;
