--- a/css/main.css
+++ b/css/main.css
@@ -516,7 +516,7 @@ hr {
 }
 .article{
     display: block;
-	background-color: #2A2A2E; 
+	/*background-color: #2A2A2E; */
   	border: none;
   	color: white;
   	padding: 15px 32px;
@@ -527,7 +527,16 @@ hr {
 	margin-left: auto;
 	margin-top: 0;
 	font-family: 'Roboto', sans-serif;
-
+	margin-left: auto;
+    margin-right: auto;
+  	width: 55%;
+}
+.article img{
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	margin-top: 10px;
 }
 .wiki-list{
 	text-align: center;
@@ -544,4 +553,8 @@ hr {
 	margin-right: auto;
 	padding: 60px;
 	border-radius: 8px;
+}
+.redmark{
+	color: red;
+	font-weight: bold;
 }
