--- a/css/main.css
+++ b/css/main.css
@@ -1,72 +1,68 @@
 body{
 	background-color: #18181B;
 }
+/*НОВОЕ МЕНЮ МОБИЛЬНОЕ*/
+.menu-triger {
+	display: none;
+	width: 25px;
+	height: 17px;	
+	background: url(https://snipp.ru/demo/449/menu.png) 0 0 repeat;
+	position: absolute;
+	right: 15px;
+	top: 28px;
+}	
+.menu-close {
+	display: block;
+	width: 28px;
+	height: 28px;	
+	background: url(https://snipp.ru/demo/449/close.png) 0 0 repeat;
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	z-index: 100;
+}
+.menu-popup {
+	display: none;	
+	background: #2c2e3e;
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	top: 0;
+	box-sizing: border-box;
+	padding: 30px;
+	z-index: 9999;	
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.menu-popup ul {
+	margin: 0;
+	padding: 0;
+}
+.menu-popup li {
+	list-style: none;
+	margin: 10px 0;
+	padding: 0;
+	text-align: center;
+}
+.menu-popup li a {
+	font-size: 18px;
+	font-family: "Arial";
+	color: rgb(255, 255, 255);
+	line-height: 1.4;	
+	text-decoration: none;
+	transition: all 0.5s ease;
+}
+.menu-popup li a:hover {
+	
+	color: blue;
+
+}
+.body_pointer * {
+	cursor: pointer;
+}
+
+
+
 /*МЕНЮ*/
-/* The container <div> - needed to position the dropdown content */
-.setdown {
-    position: relative;
-    display: block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.setdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 50px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.setdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    margin-right: 100px;
-}
-
-/* Change color of dropdown links on hover */
-.setdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu on hover */
-.setdown:hover .setdown-content {display: block;}
-
-
- /* Dropdown Button */
-
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 50px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
 
  @media (max-width: 1024px) 
 { 
@@ -121,18 +117,7 @@ body{
 	margin:0;
 	padding: 15px;
 }
-#menubutton
-{
-	text-align: center;
-	margin-right: 15px;
-	margin-top: 20px;
-	display: none;
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    top: 1px;
-    right: 100px;
-}
+
 .head{
 	position: fixed;
 	width: 100%;
@@ -172,7 +157,7 @@ body{
     display: none;
 }
 
-#menubutton
+.menu-triger
 {
     display: block;
 }
