--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body{
 	background-color: #18181B;
+	font-size: 130%;
 }
 /*НОВОЕ МЕНЮ МОБИЛЬНОЕ*/
 .menu-triger {
@@ -106,6 +107,7 @@ body{
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 	display: inline-block;
+	font-size: 130%;
 }
 .textik{
 	width: 90%;
@@ -128,7 +130,7 @@ body{
 @media (max-width: 980px) 
 { 
 .question{
-	width: 70%;
+	width: 90%;
 }
 .wiki{
 	width: 70%;
@@ -176,7 +178,7 @@ body{
   	padding: 15px 32px;
   	text-align: left;
   	text-decoration: none;
-  	font-size: 23px;
+
   	border-radius:9px;
   	margin-right: auto;
 	margin-left: auto;
@@ -280,6 +282,7 @@ display: block;
 	margin-left:auto;
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
+	font-size: 190%;
 
 }
 
@@ -290,7 +293,7 @@ background-color:#0a0a0a;
 p{
 
 margin-right: 40px;
-font-size: 20px;
+font-size: 190%;
 font-family: 'Open Sans', sans-serif;
 
 }
@@ -346,7 +349,7 @@ body {
 	padding: 0;
 	margin: 0;
 	color: white;
-	font-size: 16px;
+
 	
 }
 
