--- a/css/main.css
+++ b/css/main.css
@@ -5,18 +5,20 @@ body{
 /*НОВОЕ МЕНЮ МОБИЛЬНОЕ*/
 .menu-triger {
 	display: none;
-	width: 25px;
-	height: 17px;	
+	width: 45px;
+	height: 37px;	
 	background: url(https://snipp.ru/demo/449/menu.png) 0 0 repeat;
+	background-size: 100%;
 	position: absolute;
 	right: 15px;
 	top: 28px;
 }	
 .menu-close {
 	display: block;
-	width: 28px;
-	height: 28px;	
+	width: 58px;
+	height: 58px;	
 	background: url(https://snipp.ru/demo/449/close.png) 0 0 repeat;
+	background-size: 100%;
 	position: absolute;
 	right: 20px;
 	top: 20px;
@@ -40,15 +42,15 @@ body{
 }
 .menu-popup li {
 	list-style: none;
-	margin: 10px 0;
+	margin: 13px 0;
 	padding: 0;
 	text-align: center;
 }
 .menu-popup li a {
-	font-size: 18px;
+	font-size: 58px;
 	font-family: "Arial";
 	color: rgb(255, 255, 255);
-	line-height: 1.4;	
+	line-height: 3;	
 	text-decoration: none;
 	transition: all 0.5s ease;
 }
@@ -274,6 +276,7 @@ footer{
 .div-first-atall{
 	background-color: #111111;
 	padding: 65px;
+	font-size: 60%;
 }
 .div-second-atall{
 background-color: #0a0a0a;
