--- a/css/main.css
+++ b/css/main.css
@@ -388,7 +388,7 @@ font-family: 'Open Sans', sans-serif;
 }
 
 header{
-	background-image: url('2.gif') ;
+	background-image: url('2.jpg') ;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-position: top;
